test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/compound_assign_to_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  string literal("My string")
  +=
  const int(1)
  ;
  return
  const int(0)
  ;
  }
